force-app/main/default/objects/SVMXC__SPM_Mean_Time_Between_Failure__c/SVMXC__SPM_Mean_Time_Between_Failure__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture the uptime and downtime information for IB’s to compute the Mean Time Between Failure information</description>
    <label>SPM - Mean Time Between Failure</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Mean Time Between Failures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>