force-app/main/default/objects/SVMXC__SPM_Mean_Time_Between_Failure__c/fields/SVMXC__Expected_Uptime__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Expected_Uptime__c</fullName>
    <description>Holds the time difference (business-hours) between the current date and installed product&apos;s created date.</description>
    <inlineHelpText>Holds the time difference (business-hours) between the current date and installed product&apos;s created date.</inlineHelpText>
    <label>Expected Uptime (Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>