force-app/main/default/objects/SVMXC__SPM_Mean_Time_Between_Failure__c/fields/SVMXC__MTBF__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__MTBF__c</fullName>
    <description>Formula for computing the Mean Time Between Failure information. Holds the quotient value derived by dividing Actual-uptime with work-order count.</description>
    <formula>SVMXC__Actual_Uptime__c  /  SVMXC__Workorder_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula for computing the Mean Time Between Failure information. Holds the quotient value derived by dividing Actual-uptime with work-order count.</inlineHelpText>
    <label>MTBF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>