force-app/main/default/objects/SVMXC__SPM_Mean_Time_Between_Failure__c/fields/SVMXC__Run_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Run_On__c</fullName>
    <description>Holds the Engine Run date time for capturing the data.</description>
    <inlineHelpText>Holds the Engine Run date time for capturing the data.</inlineHelpText>
    <label>Run On</label>
    <type>DateTime</type>
</CustomField>